# keyper

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: unit-test.yml
src/: CMakeLists.txt  config.cc  config.h  key.h  keyper.cc  keyper.h  main.cc
src/data/: CMakeLists.txt  vault.cc  vault.h
src/data/models/: CMakeLists.txt  key.cc  key.h  key_entity.cc  key_entity.h  query.h
src/data/sources/: CMakeLists.txt  interface.h  json_db.h
src/data/sources/json_db/: CMakeLists.txt  check.cc  erase.cc  fetch.cc  helper.cc  init.cc  insert.cc  update.cc
src/types/: unique_id.h
src/utils/: CMakeLists.txt  fs.cc  fs.h  input.cc  input.h
tests/: CMakeLists.txt  config.test.cc  fs.test.cc  input.test.cc  json_db.test.cc  key_compare.test.cc
